--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Count the number of words in a string of text",
   "main": "src/count-words.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/test.js"
   },
   "author": "",
   "license": "MIT Expat"
